--- a/Sample/Ecd.dproj
+++ b/Sample/Ecd.dproj
@@ -108,6 +108,7 @@
             <Form>Form1</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="DAO\JSEcd.DAO.Registro0000.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
