--- a/Sample/Ecd.dproj
+++ b/Sample/Ecd.dproj
@@ -109,6 +109,9 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="DAO\JSEcd.DAO.Registro0000.pas"/>
+        <DCCReference Include="DAO\JSEcd.DAO.RegistroI050.pas"/>
+        <DCCReference Include="DAO\JSEcd.DAO.RegistroI051.pas"/>
+        <DCCReference Include="DAO\JSEcd.DAO.RegistroI052.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -137,6 +140,12 @@
                 <DeployFile LocalName="Win32\Debug\Ecd.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>Ecd.exe</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="DAO\JSEcd.DAO.RegistroI051.PAS" Configuration="Debug" Class="ProjectFile">
+                    <Platform Name="Win32">
+                        <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
