--- a/Sample/Ecd.dproj
+++ b/Sample/Ecd.dproj
@@ -112,6 +112,8 @@
         <DCCReference Include="DAO\JSEcd.DAO.RegistroI050.pas"/>
         <DCCReference Include="DAO\JSEcd.DAO.RegistroI051.pas"/>
         <DCCReference Include="DAO\JSEcd.DAO.RegistroI052.pas"/>
+        <DCCReference Include="DAO\JSEcd.DAO.RegistroI075.pas"/>
+        <DCCReference Include="DAO\JSEcd.DAO.RegistroI100.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
