--- a/Sample/Ecd.dproj
+++ b/Sample/Ecd.dproj
@@ -118,6 +118,8 @@
         <DCCReference Include="DAO\JSEcd.DAO.RegistroI155.pas"/>
         <DCCReference Include="DAO\JSEcd.DAO.RegistroI157.pas"/>
         <DCCReference Include="DAO\JSEcd.DAO.Classes.pas"/>
+        <DCCReference Include="DAO\JSEcd.DAO.RegistroI200.pas"/>
+        <DCCReference Include="DAO\JSEcd.DAO.RegistroI250.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
