--- a/Sample/Ecd.dproj
+++ b/Sample/Ecd.dproj
@@ -120,6 +120,8 @@
         <DCCReference Include="DAO\JSEcd.DAO.Classes.pas"/>
         <DCCReference Include="DAO\JSEcd.DAO.RegistroI200.pas"/>
         <DCCReference Include="DAO\JSEcd.DAO.RegistroI250.pas"/>
+        <DCCReference Include="DAO\JSEcd.DAO.RegistroI350.pas"/>
+        <DCCReference Include="DAO\JSEcd.DAO.RegistroI355.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
