--- a/Sample/Ecd.dproj
+++ b/Sample/Ecd.dproj
@@ -124,6 +124,7 @@
         <DCCReference Include="DAO\JSEcd.DAO.RegistroI355.pas"/>
         <DCCReference Include="DAO\JSEcd.DAO.RegistroJ100.pas"/>
         <DCCReference Include="DAO\JSEcd.DAO.RegistroJ150.pas"/>
+        <DCCReference Include="DAO\JSEcd.DAO.RegistroJ930.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
